EAPLI - [US315] — Tests and Implementation for Add Video of Simulation to the Proposal Related to: #141 #144 #158